--- a/templates/cadastroCostos/cad_stock_Form.html
+++ b/templates/cadastroCostos/cad_stock_Form.html
@@ -104,7 +104,7 @@
             console.log("NOHAYCADENASd");
         }
      	$.fn.select2.defaults.set( "theme", "bootstrap" );
-        $.fn.select2.defaults.set( "width", "auto" );
+        $.fn.select2.defaults.set( "width", "250px" );
         $.fn.select2.defaults.set( "placeholder", "Seleccione" );
         $.fn.select2.defaults.set( "selectOnClose", "true" );
         $('.js-example-basic-single').select2();
