--- a/templates/cadastroCostos/cad_ing_ret_Form_E.html
+++ b/templates/cadastroCostos/cad_ing_ret_Form_E.html
@@ -67,6 +67,14 @@
             });
 
         });
+
+    $('#formPost').keydown(function (e) {
+        if (e.keyCode == 13) {
+            e.preventDefault();
+            console.log("Enter does nothing")
+            return false;
+        }
+    });
      $('Form').submit(function() {
         $('#id_ind_ing_egr').removeAttr('disabled');
         document.getElementById("overlay").style.display = "block";
