--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -100,7 +100,7 @@
                 <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 40px, 0px);">
                     <a class="dropdown-item" href="{% url 'betaNegocio:cad_estado_eco_fin' %}">Historicos</a>
                     <a class="dropdown-item" href="{% url 'betaNegocio:cad_cierre_eco_fin_cierre_crear' %}">Cierre</a>
-                    <a class="dropdown-item" href="{% url 'betaNegocio:cad_cierre_eco_fin_actual' %}">Estado</a>
+                    <a class="dropdown-item" href="{% url 'betaNegocio:cad_cierre_eco_fin_actual' %}">Estado On Line Actual</a>
                 </div>
             </li>
         </ul>
