--- a/templates/cadastroCostos/cad_cierre_eco_fin_actual.html
+++ b/templates/cadastroCostos/cad_cierre_eco_fin_actual.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 
 {% block SUBTITLE %}
-    Estado Economico-Financiero
+    Estado On Line Economico-Financiero
 {%endblock%}
 {% block searchList %}
 {% endblock %}
