--- a/templates/cadastroCostos/cad_cierre_eco_fin_cierre.html
+++ b/templates/cadastroCostos/cad_cierre_eco_fin_cierre.html
@@ -1,5 +1,6 @@
 {% extends 'base/base.html' %}
-
+{% load staticfiles %}
+{% load static %}
 {% block SUBTITLE %}
     Cierre Mensual Economico-Financiero
 {%endblock%}
@@ -72,8 +73,28 @@
 
 <form method='GET' enctype='multipart/form-data' id='formId'>
 
+
   <table>
       <tr>
+        <th>
+         <label for="mesCierreAnt">Mes de Cierre Anterior:</label>
+        </th>
+          <td>
+              <input autocomplete="off" readonly  id="mesCierreAnt" type="text" class="form-control form-control-1 input-sm" name="t" placeholder="Ninguno" value="{{mesCierreAnt}}" >
+          </td>
+          <td>
+            <input autocomplete="off"  readonly id="rangoAnt" class="form-control mr-sm-2" type="text" name="s" placeholder="Ninguno" value="{{rangoAnt}}" >
+
+        </td>
+
+      </tr>
+      <tr>
+        <th>
+         <label for="mesCierre">Mes de Cierre Actual:</label>
+        </th>
+          <td>
+              <input autocomplete="off" id="mesCierre" type="text" class="form-control form-control-1 input-sm" name="r" placeholder="Mes de Cierre" value="{{ request.GET.r }}" >
+          </td>
           <td>
             <input autocomplete="off" id="reportrange" class="form-control mr-sm-2" type="text" name="q"  value="{{ request.GET.q }}" >
 
@@ -257,11 +278,71 @@
 
 {% endblock %}
 {% block scripts %}
+
+
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+    <script type="text/javascript" src="{% static 'js/bootstrap-datepicker.min.js' %}"></script>
+    <link href="{% static 'css/datepicker.min.css' %}" rel="stylesheet">
     <script>
+    var startDate = new Date();
+    var fechaFin = new Date();
+    var FromEndDate = new Date();
+    var ToEndDate = new Date();
+
+
+
+
+    $('#mesCierre').datepicker({
+        autoclose: true,
+        minViewMode: 1,
+        format: 'MM/yyyy'
+        }).on('changeDate', function(selected){
+                startDate = new Date(selected.date.valueOf());
+                startDate.setDate(startDate.getDate(new Date(selected.date.valueOf())));
+                var date = $(this).datepicker('getDate'),
+                        day  = date.getDate(),
+                        month = date.getMonth() + 1,
+                        year =  date.getFullYear();
+                var FirstDay = new Date(year, month-1, 1);
+                var LastDay = new Date(year, month , 0);
+                console.log(FirstDay)
+                console.log(LastDay)
+                $('#reportrange').daterangepicker({
+                    startDate:FirstDay,
+                    endDate: LastDay,
+                })
+                var startDate   =  $("#reportrange").data('daterangepicker').startDate.format("YYYY-MM-DD");
+                var endDate     =  $("#reportrange").data('daterangepicker').endDate.format("YYYY-MM-DD");
+                $('#formId').append('<input type="hidden" name="inicio_date" value="'+startDate+'" />');
+                $('#formId').append('<input type="hidden" name="fin_date" value="'+endDate+'" />');
+                $('#formId').submit();
+
+    });
+
+    $('#mesCierreAnt').datepicker({
+        autoclose: true,
+        minViewMode: 1,
+        format: 'MM/yyyy'
+
+
+    });
+
+    var $datepicker2 = $('#mesCierreAnt');
+    $datepicker2.datepicker();
+    console.log("ANTERIOR")
+    console.log($('#mesCierreAnt').val())
+    if($('#mesCierreAnt').val()===""||$('#mesCierreAnt').val()===null||$('#mesCierreAnt').val()==0){
+        console.log("No hay valor")
+    }else{
+        $datepicker2.datepicker('setDate', new Date($('#mesCierreAnt').val()));
+    }
+    $("#mesCierreAnt").attr("disabled","disabled")
+    $("#rangoAnt").attr("disabled","disabled")
+
+
 
     $( document ).ready(function() {
         $(".card-title").each(function() {
@@ -326,11 +407,17 @@
         });
     });
     $('#reportrange').on('apply.daterangepicker', function(ev, picker) {
+      console.log("REPORTRANGE")
       console.log(picker.startDate.format('YYYY-MM-DD'));
       console.log(picker.endDate.format('YYYY-MM-DD'));
+      var endDAte = picker.endDate.format('MMMM/YYYY')
+      console.log(endDAte)
       $('#formId').append('<input type="hidden" name="inicio_date" value="'+picker.startDate.format('YYYY-MM-DD')+'" />');
       $('#formId').append('<input type="hidden" name="fin_date" value="'+picker.endDate.format('YYYY-MM-DD')+'" />');
-      $('#formId').submit();
+        var $datepicker = $('#mesCierre');
+        $datepicker.datepicker();
+        $datepicker.datepicker('setDate', new Date(endDAte));
+      <!--$('#formId').submit();-->
     });
 
     $('#CierreMensual').click(function (ev, picker) {
